Add send message to friend API
