# docs/swagger/index.json
@@ -21,7 +21,8 @@
           "becomeFriend",
           "leftRoom",
           "removedFromRoom",
-          "createRoom"
+          "createRoom",
+          "callCancelled"
         ]
       }
     }
@@ -606,6 +607,68 @@
           },
           "404": {
             "description": "Friend not found"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Message",
+          "Friend"
+        ],
+        "summary": "Send message to friend",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  },
+                  "type": {
+                    "enum": [
+                      "image",
+                      "text",
+                      "video",
+                      "record",
+                      "sticker",
+                      "emoji",
+                      "system"
+                    ],
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Send successful"
+          },
+          "400": {
+            "description": "Invalid user, message or chat room"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "User not found or chat room not found"
           }
         }
       }
@@ -1413,24 +1476,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "message": {
-                    "type": "string"
-                  },
-                  "type": {
-                    "enum": [
-                      "image",
-                      "text",
-                      "video",
-                      "record",
-                      "sticker",
-                      "emoji",
-                      "system"
-                    ],
-                    "type": "string"
-                  }
-                }
+                "$ref": "#/paths/~1friend~1%7Bid%7D/post/requestBody/content/application~1json/schema"
               }
             }
           }
